Fixed styling issue bugs on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -100,14 +100,13 @@
 /* Dropdown menu */
 .handpicked-navbar-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
   li > a {
     transition: color 0.3s ease;
     font-weight: lighter !important;
     color: #999999 !important;
     font-size: 16px !important;
-    line-height: 22px !important;
+    line-height: 18px !important;
     padding: 10px 20px;
     text-align: right;
   }
@@ -116,7 +115,7 @@
     color: $green !important;
   }
 }
-.handpicked-navbar-dropdown-menu:before {
+#main-dropdown.handpicked-navbar-dropdown-menu:before {
   content: ' ';
   height: 10px;
   width: 10px;
